--- a/deykyc/package.json
+++ b/deykyc/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@thirdweb-dev/react": "^4.1.11",
     "@thirdweb-dev/sdk": "^4.0.18",
+    "@thirdweb-dev/storage": "^2.0.8",
+    "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.2",
+    "ipfs-http-client": "^60.0.1",
     "next": "14.0.3",
     "pino-pretty": "^10.2.3",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
