--- a/deykyc/package.json
+++ b/deykyc/package.json
@@ -16,7 +16,7 @@
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.2",
     "ipfs-http-client": "^60.0.1",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "pino-pretty": "^10.2.3",
     "qrcode": "^1.5.3",
     "react": "^18",
